Revision history for Apache::AuthCookie

{{$NEXT}}
   - 2.4: fix POD typo and add missing ABSTRACT

3.24  2016-01-13
   - Update Apache 2.4 README, flesh out guts of Authz Provider notes.
   - Improve Apache 2.4 README's AuthzProvider documentation
   - Add POD to Apache2_4::AuthCookie
   - Add FAQ to Apache2_4::AuthCookie documenation
   - 2.4: document that PerlAddAuthzProvider is only needed for *custom* Requires directives.
   - 2.4: make authz_handler recognize multiple usernames in the directive like
     mod_authz_user does.
   - add test case for internal authz_handler
   - explicitly require Apache::Test 1.39 so that APACHE2_4 defines are set

3.23  2015-09-10
   - Improve CGI mode param() handling to avoi CGI.pm's "param() called in list context" warning.
   - add support for Apache 2.4 via mod_perl 1.09.
     ***** IMPORTANT *****
     Apache 2.4 has a *VERY* different API for authentication.  You will need
     to port your subclass and configuration over to the Apache 2.4 API in
     order to use Apache 2.4!  Please be sure to read README.apache-2.4.pod for
     porting instructions!

3.22  2014-05-07

3.21  2014-05-07
   - Bad release - deleted

3.20  2013-12-09
   - login_form: return OK for mobile IE 10, which also ignores content for
     FORBIDDEN response.
   - test .pl registry scripts: do not try to load mod_perl.pm
   - escape html tags in destination.
   - fix abstract in FAQ pod.

3.19  2012-12-28
   - split out CGI data handling into ::AuthCookie::Params modules
   - use Apache::Request/Apache2::Request from libapreq if available. Otherwise,
     fall back to CGI.pm for handling CGI data.
   - improve "removed cookie" debug log message
   - add dependencies: autobox, Class::Load
   - allow username to be '0'
   - login_form: return OK for SymbianOS, which ignores content for FORBIDDEN responses.
   - add login_form_status() to override HTTP status returned by login form
   - recognize_user: return DECLINED if user is not recognized
