@@ -18,3 +18,4 @@ min_version = 1.39
 CGI = 3.12
 Class::Load = 0.03
 autobox = 1.10
+Test::More = 0.94
