@@ -14,33 +14,33 @@ use Apache::TestRequest qw(GET POST GET_BODY);
 
 Apache::TestRequest::user_agent( reset => 1, requests_redirectable => 0 );
 
-plan tests => 52, need_lwp;
+plan tests => 31, need_lwp;
 
-ok 1;  # we loaded.
+ok 1, 'Test initialized';
 
 # TODO: the test descriptions should be things other than 'test #' here.
 
 # check that /docs/index.html works.  If this fails, the test environment did
 # not configure properly.
-{
+subtest 'get index.html' => sub {
     my $url = '/docs/index.html';
     my $data = strip_cr(GET_BODY $url);
 
     like($data, qr/Get the protected document/s,
          '/docs/index.html seems to work');
-}
+};
 
 # test no_cookie failure
-{
+subtest 'no cookie' => sub {
     my $url = '/docs/protected/get_me.html';
     my $r = GET $url;
 
     like($r->content, qr/Failure reason: 'no_cookie'/s,
          'no_cookie works');
-}
+};
 
 # should succeed with redirect.
-{
+subtest 'login redirects' => sub {
     my $r = POST('/LOGIN', [
         destination  => '/docs/protected/get_me.html',
         credential_0 => 'programmer',
@@ -50,66 +50,9 @@ ok 1;  # we loaded.
     is($r->code, 302, 'login produces redirect');
     is($r->header('Location'), '/docs/protected/get_me.html',
        'redirect header exists, and contains expected url');
-}
+};
 
-# get protected document with valid cookie.  Should succeed.
-{
-    my $uri = '/docs/protected/get_me.html';
-
-    my $r = GET(
-        $uri,
-        Cookie => 'Sample::AuthCookieHandler_WhatEver=programmer:Hero;'
-    );
-
-    is($r->code, '200', 'get protected document');
-    like($r->content, qr/Congratulations, you got past AuthCookie/s,
-         'check protected document content');
-}
-
-# should fail with no_cookie
-{
-    my $url = '/docs/protected/get_me.html';
-
-    my $dat = strip_cr(GET_BODY($url));
-
-    like($dat, qr/Failure reason: 'no_cookie'/s,
-         'test failure reason: no_cookie');
-}
-
-# should have a Set-Cookie header that expired at epoch.
-{
-    my $url = '/docs/logout.pl';
-
-    my $r = GET($url);
-
-    my $data = $r->header('Set-Cookie');
-    my $expected = 'Sample::AuthCookieHandler_WhatEver=; expires=Mon, 21-May-1971 00:00:00 GMT; path=/';
-
-    is($data, $expected, 'logout tries to delete the cookie');
-}
-
-# check the session key
-{
-    my $data = GET_BODY(
-        '/docs/echo_cookie.pl',
-        Cookie => 'Sample::AuthCookieHandler_WhatEver=programmer:Hero;'
-    );
-
-    is(strip_cr($data), 'programmer:Hero', 'session key contains expected data');
-}
-
-# should fail because of 'require user programmer'
-{
-    my $r = GET(
-        '/docs/protected/get_me.html',
-        Cookie => 'Sample::AuthCookieHandler_WhatEver=some-user:duck;'
-    );
-
-    is($r->code, '403', 'user "some-user" is not authorized');
-}
-
-# Should redirect to /docs/protected/get_me.html
-{
+subtest 'redirect with bad session key' => sub {
     my $r = POST('/LOGIN', [
         destination  => '/docs/protected/get_me.html',
         credential_0 => 'programmer',
@@ -124,20 +67,66 @@ ok 1;  # we loaded.
     is($r->header('Set-Cookie'),
        'Sample::AuthCookieHandler_WhatEver=programmer:Heroo; path=/',
        'programmer:Heroo cookie header contains expected data');
-}
+};
+
+# get protected document with valid cookie.  Should succeed.
+subtest 'redirect wit valid cookie' => sub {
+    my $uri = '/docs/protected/get_me.html';
+
+    my $r = GET(
+        $uri,
+        Cookie => 'Sample::AuthCookieHandler_WhatEver=programmer:Hero;'
+    );
+
+    is($r->code, '200', 'get protected document');
+    like($r->content, qr/Congratulations, you got past AuthCookie/s,
+         'check protected document content');
+};
+
+# should have a Set-Cookie header that expired at epoch.
+subtest 'logout deletes cookie' => sub {
+    my $url = '/docs/logout.pl';
+
+    my $r = GET($url);
+
+    my $data = $r->header('Set-Cookie');
+    my $expected = 'Sample::AuthCookieHandler_WhatEver=; expires=Mon, 21-May-1971 00:00:00 GMT; path=/';
+
+    is($data, $expected, 'logout tries to delete the cookie');
+};
+
+# check the session key
+subtest 'session key data' => sub {
+    my $data = GET_BODY(
+        '/docs/echo_cookie.pl',
+        Cookie => 'Sample::AuthCookieHandler_WhatEver=programmer:Hero;'
+    );
+
+    is(strip_cr($data), 'programmer:Hero', 'session key contains expected data');
+};
+
+# should fail because of 'require user programmer'
+subtest 'invalid user' => sub {
+    my $r = GET(
+        '/docs/protected/get_me.html',
+        Cookie => 'Sample::AuthCookieHandler_WhatEver=some-user:duck;'
+    );
+
+    is($r->code, '403', 'user "some-user" is not authorized');
+};
 
 # should get the login form back (bad_cookie).
-{
+subtest 'invalid cookie' => sub {
     my $data = GET_BODY(
         '/docs/protected/get_me.html',
         Cookie=>'Sample::AuthCookieHandler_WhatEver=programmer:Heroo'
     );
 
     like($data, qr/Failure reason: 'bad_cookie'/, 'invalid cookie');
-}
+};
 
 # should get the login form back (bad_credentials)
-{
+subtest 'bad credentials' => sub {
     my $r = POST('/LOGIN', [
         destination  => '/docs/protected/get_me.html',
         credential_0 => 'fail',
@@ -146,10 +135,9 @@ ok 1;  # we loaded.
 
     like($r->content, qr/Failure reason: 'bad_credentials'/,
          'invalid credentials');
-}
+};
 
-# check that the destination is right.
-{
+subtest 'AuthAny' => sub {
     my $r = POST('/LOGIN', [
         destination  => '/docs/authany/get_me.html',
         credential_0 => 'some-user',
@@ -164,21 +152,19 @@ ok 1;  # we loaded.
        'Set-Cookie header is correct');
 
     is($r->code, 302, 'redirect code is correct');
-}
+};
 
 # should fail because all requirements are not met
-{
+subtest 'AuthAll' => sub {
     my $r = GET(
         '/docs/authall/get_me.html',
         Cookie => 'Sample::AuthCookieHandler_WhatEver=some-user:mypassword'
     );
 
     is($r->code(), 403, 'unauthorized if requirements are not met');
-}
 
-# should pass, ALL requirements are met
-{
-    my $r = GET(
+    # should pass, ALL requirements are met
+    $r = GET(
         '/docs/authall/get_me.html',
         Cookie => 'Sample::AuthCookieHandler_WhatEver=programmer:Hero'
     );
@@ -186,28 +172,26 @@ ok 1;  # we loaded.
     is($r->code, '200', 'get protected document');
     like($r->content, qr/Congratulations, you got past AuthCookie/s,
          'check protected document content');
-}
+};
 
-# test POST to GET conversion
-{
+subtest 'POST to GET conversion' => sub {
     my $r = POST('/docs/protected/get_me.html', [
         foo => 'bar'
     ]);
 
     like($r->content, qr#"/docs/protected/get_me\.html\?foo=bar"#,
          'POST -> GET conversion works');
-}
+};
 
-# same test at #16, but in GET mode. Should succeed
-{
+subtest 'QUERY_STRING is preserved' => sub {
     my $data = GET_BODY('/docs/protected/get_me.html?foo=bar');
 
     like($data, qr#"/docs/protected/get_me\.html\?foo=bar"#,
          'input query string exists in desintation');
-}
+};
 
 # should succeed (any requirement is met)
-{
+subtest 'AuthAny' => sub {
     my $r = GET(
         '/docs/authany/get_me.html',
         Cookie => 'Sample::AuthCookieHandler_WhatEver=some-user:mypassword'
@@ -215,21 +199,27 @@ ok 1;  # we loaded.
 
     like($r->content, qr/Congratulations, you got past AuthCookie/,
          'AuthAny access allowed');
-}
 
-# any requirement, username=0 works.
-{
-    my $r = GET(
+    # any requirement, username=0 works.
+    $r = GET(
         '/docs/authany/get_me.html',
         Cookie => 'Sample::AuthCookieHandler_WhatEver=0:mypassword'
     );
 
     like($r->content, qr/Congratulations, you got past AuthCookie/,
          'username=0 access allowed');
-}
+
+    # no AuthAny requirements met
+    $r = GET(
+        '/docs/authany/get_me.html',
+        Cookie => 'Sample::AuthCookieHandler_WhatEver=nouser:mypassword'
+    );
+
+    is($r->code, 403, 'AuthAny forbidden');
+};
 
 # local authz provider test for 2.4 (works same as authany on older versions)
-{
+subtest 'Authz Provider' => sub {
     my $r = GET(
         '/docs/myuser/get_me.html',
         Cookie => 'Sample::AuthCookieHandler_WhatEver=programmer:Hero'
@@ -237,10 +227,10 @@ ok 1;  # we loaded.
 
     like($r->content, qr/Congratulations, you got past AuthCookie/,
          'myuser=programmer access allowed');
-}
+};
 
 # login with username=0 works
-{
+subtest 'login with username=0' => sub {
     my $r = POST('/LOGIN', [
         destination  => '/docs/authany/get_me.html',
         credential_0 => '0',
@@ -250,20 +240,10 @@ ok 1;  # we loaded.
     is($r->code, 302, 'username=0 login produces redirect');
     is($r->header('Location'), '/docs/authany/get_me.html',
        'redirect header exists, and contains expected url');
-}
-
-# should fail: AuthAny and NONE of the requirements are met.
-{
-    my $r = GET(
-        '/docs/authany/get_me.html',
-        Cookie => 'Sample::AuthCookieHandler_WhatEver=nouser:mypassword'
-    );
-
-    is($r->code, 403, 'AuthAny forbidden');
-}
+};
 
 # Should succeed and cookie should have HttpOnly attribute
-{
+subtest 'HttpOnly cookie attribute' => sub {
     my $r = POST('/LOGIN-HTTPONLY', [
         destination  => '/docs/protected/get_me.html',
         credential_0 => 'programmer',
@@ -278,10 +258,10 @@ ok 1;  # we loaded.
        'cookie contains HttpOnly attribute');
 
     is($r->code, 302, 'check redirect response code');
-}
+};
 
 # test SessionTimeout
-{
+subtest 'session timeout' => sub {
     my $r = GET(
         '/docs/stimeout/get_me.html',
         Cookie => 'Sample::AuthCookieHandler_WhatEver=programmer:Hero'
@@ -290,11 +270,11 @@ ok 1;  # we loaded.
     like($r->header('Set-Cookie'),
          qr/^Sample::AuthCookieHandler_WhatEver=.*expires=.+/,
          'Set-Cookie contains expires property');
-}
+};
 
 # should return bad credentials page, and credentials should be in a comment.
 # We are checking here that $r->prev->pnotes('WhatEverCreds') works.
-{
+subtest 'creds are in pnotes' => sub {
     my $r = POST('/LOGIN', [
         destination  => '/docs/protected/get_me.html',
         credential_0 => 'fail',
@@ -302,11 +282,11 @@ ok 1;  # we loaded.
     ]);
 
     like($r->content, qr/creds: fail Hero/s, 'WhatEverCreds pnotes works');
-}
+};
 
 # regression - Apache2::URI::unescape_url() does not handle '+' to ' '
 # conversion.
-{
+subtest 'unescape URL with spaces' => sub {
     my $r = POST('/LOGIN', [
         destination  => '/docs/protected/get_me.html',
         credential_0 => 'fail',
@@ -315,11 +295,11 @@ ok 1;  # we loaded.
 
     like($r->content, qr/creds: fail one two/,
          'read form data handles "+" conversion');
-}
+};
 
 # variation of '+' to ' ' regression.  Make sure we do not remove encoded
 # '+'
-{
+subtest 'do not remove encoded +' => sub {
     my $r = POST('/LOGIN', [
         destination  => '/docs/protected/get_me.html',
         credential_0 => 'fail',
@@ -328,10 +308,10 @@ ok 1;  # we loaded.
 
     like($r->content, qr/creds: fail one\+two/,
          'read form data handles "+" conversion with encoded +');
-}
+};
 
 # XSS attack prevention.  make sure embedded \r, \n, \t is escaped in the destination.
-{
+subtest 'XSS: no newlines in destination' => sub {
     my $r = POST('/LOGIN', [
         destination  => "/docs/protected/get_me.html\r\nX-Test-Bar: True\r\nX-Test-Foo: True\r\n",
         credential_0 => 'programmer',
@@ -350,28 +330,27 @@ ok 1;  # we loaded.
 
     ok(!defined $r->header('X-Test-Foo'), 'anti XSS injection with escaped CRLF');
     ok(!defined $r->header('X-Test-Bar'), 'anti XSS injection with escaped CRLF');
-}
+};
 
 # embedded html tags in destination
-{
+subtest 'XSS: no embedded HTML in destination' => sub {
     my $r = POST('/LOGIN', [
         destination  => '"><form method="post">Embedded Form</form>'
     ]);
 
     like $r->content, qr{"%22%3E%3Cform method=%22post%22%3EEmbedded Form%3C/form%3E"};
-}
+};
 
 # embedded script tags
-{
+subtest 'XSS: no embedded script' => sub {
     my $r = POST('/LOGIN', [
         destination => q{"><script>alert('123')</script>}
     ]);
 
     ok index($r->content, q{<script>alert('123')</script>}) == -1;
-}
+};
 
-# make sure '/' in password is preserved.
-{
+subtest 'preserve / in password' => sub {
     my $r = POST('/LOGIN', [
         destination  => '/docs/protected/get_me.html',
         credential_0 => 'fail',
@@ -380,10 +359,10 @@ ok 1;  # we loaded.
 
     like($r->content, qr/creds: fail one\/two/,
          'read form data handles "/" conversion with encoded +');
-}
+};
 
 # make sure multi-valued form data is preserved.
-{
+subtest 'multi-valued form data is preserved' => sub {
     my $r = POST('/docs/protected/xyz', [
         one => 'abc',
         one => 'def'
@@ -396,19 +375,19 @@ ok 1;  # we loaded.
     # check for multi-valued form data.
     like($r->content, qr/one=abc&one=def/,
          'post conversion perserves multi-valued fields');
-}
+};
 
 # make sure $ENV{REMOTE_USER} gets set up
-{
+subtest 'setup $ENV{REMOTE_USER}' => sub {
     my $r = GET('/docs/protected/echo_user.pl',
         Cookie => 'Sample::AuthCookieHandler_WhatEver=programmer:Hero'
     );
 
     like($r->content, qr/User: programmer/);
-}
+};
 
 # test login form response status=OK with SymbianOS
-{
+subtest 'SymbianOS login form response code' => sub {
     my $orig_agent = Apache::TestRequest::user_agent()->agent;
 
     # should get a 403 response by default
@@ -425,15 +404,15 @@ ok 1;  # we loaded.
     like $r->content, qr/\bcredential_0\b/, 'got login form';
 
     Apache::TestRequest::user_agent()->agent($orig_agent);
-}
+};
 
-{
+subtest 'recognize user' => sub {
     # recognize user
     my $body = GET_BODY('/docs/echo-user.pl',
         Cookie => 'Sample::AuthCookieHandler_WhatEver=programmer:Hero');
 
     is $body, 'programmer';
-}
+};
 
 # remove CR's from a string.  Win32 apache apparently does line ending
 # conversion, and that can cause test cases to fail because output does not
